example of esm importing cjs

--- a/packages/apps/my-esm-app/package.json
+++ b/packages/apps/my-esm-app/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "@zwi/divide-by",
+  "name": "@zwi/my-esm-app",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js"
+  },
+  "dependencies": {
+    "@zwi/divide-by": "workspace:*"
   },
   "keywords": [],
   "author": "",
