--- a/packages/apps/my-app/package.json
+++ b/packages/apps/my-app/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node ./index.js"
   },
-  "dependencies": {
-    "@zwi/divide-by": "workspace:*"
-  },
+  "dependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
